src/assets/sass/modules/_layout-shared.scss
/* ... */
/**
 * Styling of edit panel cancel/submit button combinations.
 */

.txp-edit-actions {
    margin: 1em -1em;
    padding: 1em 1em 0;
    border-top: 2px solid $color-background;
    text-align: right;

    > * {
        margin: 0 0 0 1em;
    }
}

/**
 * Swap alignment and margin positions in RTL languages.
 */

[dir="rtl"] .txp-edit-actions {
    text-align: left;

    > * {
        margin: 0 1em 0 0;
    }
}


/* Form fields.
   ========================================================================== */

/**
 * Form field containers.
 *
 * Textpattern form fields can have optional inline help texts applied to them.
 *
 * Example HTML:
 *
 * <div class="txp-form-field">
 *     <div class="txp-form-field-label">
 *         <label> <a class="pophelp">i</a></label>
 *     </div>
 *     <div class="txp-form-field-value">
 *         <input>
 *     </div>
 * </div>
 *
 * <div class="txp-form-field">
 *     <div class="txp-form-field-label">
 *         <label> <a class="pophelp">i</a></label>
 *     </div>
 *     <div class="txp-form-field-instructions">
 *         <p>(Optional) intructions on how to fill out this form field.</p>
 *     </div>
 *     <div class="txp-form-field-value">
 *         <input>
 *     </div>
 * </div>
 */

.txp-form-field {
    margin: 1em 0;
}

/**
 * Label/value form field pairings.
 *
 * Note: this is always collapsed to a one-column format on mobile layout.
 *
 * Example HTML:
 *
 * <div class="txp-form-field">
 *     <div class="txp-form-field-label">
 *         <label>Label <a class="pophelp">i</a></label>
 *     </div>
 *     <div class="txp-form-field-value">
 *         <input type="text" size="32">
 *     </div>
 * </div>
 */

.txp-form-field-label,
.txp-form-field-value {
    max-width: 30em; // 360px / 12px
}

/**
 * Inline form field pairings on edit panels, preferences group panels and
 * setup panels.
 *
 * Example HTML:
 *
 * <form class="txp-edit">
 *     <div class="txp-form-field">
 *         <div class="txp-form-field-label"></div>
 *         <div class="txp-form-field-value"></div>
 *     </div>
 * </form>
 */

.txp-edit,
.txp-prefs-group,
.setup:not(.welcome) {
    .txp-form-field:not(.txp-form-field-textarea) {
        display: flex;
        align-items: baseline;
    }

    .txp-form-field-label,
    .txp-form-field-value {
        flex: 1 1 0%;
        min-height: 2.16666666666667em; // 26px / 12px
    }
}

/**
 * Don't inline or constrain form fields for textareas.
 *
 * Example HTML:
 *
 * <div class="txp-form-field txp-form-field-textarea">
 *     <div class="txp-form-field-label">
 *         <label>Label <a class="pophelp">i</a></label>
 *     </div>
 *     <div class="txp-form-field-value">
 *         <textarea></textarea>
 *     </div>
 * </div>
 */

.txp-form-field-textarea {
    .txp-form-field-label,
    .txp-form-field-value {
        flex: none;
        max-width: inherit;
        min-height: inherit;
    }
}

/**
 * Don't constrain form fields when in 3 column layout spans.
 */

.txp-layout-4col-3span {
    .txp-form-field-label,
    .txp-form-field-value {
        max-width: inherit;
    }
}

/**
 * Form field inline help texts.
 *
 * 1. Limit maximum width of instructions, for legibility.
 *
 * Example HTML:
 *
 * <div class="txp-form-field>
 *     <div class="txp-form-field-label"></div>
 *     <div class="txp-form-field-instructions">
 *         <p>(Optional) intructions on how to fill out this form field.</p>
 *     </div>
 *     <div class="txp-form-field-value"></div>
 * </div>
 */

.txp-form-field-instructions {
    /* 1 */
    max-width: 60em; // 600px / 10px
}

/**
 * Tag builder link on Forms panel and Pages panel.
 */

.txp-tagbuilder-dialog {
    position: relative;
    margin: 0 1px;
    float: right;
    z-index: 2;
}

/**
 * Swap alignment of tag builder link in RTL languages.
 */

[dir="rtl"] .txp-tagbuilder-dialog {
    float: left;
}

/**
 * Ensure dialog box vertical footprint doesn't spill out of screen area.
 */

.txp-dialog-container,
.txp-tagbuilder-container {
    display: flex;
    flex-flow: column;
    max-height: 90vh;
    overflow: hidden;

    .ui-dialog-titlebar {
        flex: none;
    }
}

.txp-dialog-content,
.txp-tagbuilder-content {
    flex: 1 1 auto;
    overflow: scroll;
}

